syntax = "proto3";

package audio;

service Audio {
    rpc SpeechToText (Request) returns (Response);
}

message Request {
    string file_url = 1;
    string lang_code = 2;
}

message Response {
    repeated string transcriptions = 1;
}
